My professional resume. Made with latex.

--- a/main.tex
+++ b/main.tex
@@ -209,18 +209,18 @@ Tech: Java, Android}
 %-----------Skills Summary-----------------
 \section{Skills Summary}
 	\resumeSubHeadingListStart
-	\resumeSubItem{Programming Languages}{~~~~~~C, C++, JAVA, Python, PHP, SQL}
-	\resumeSubItem{Frameworks}{~~~~Django, Flask, PyGame, Bootstrap, Tailwind CSS}
-	\resumeSubItem{Web Technologies}{~~~~PHP, HTML, CSS, XML, Markdown}
-	\resumeSubItem{Databases}{~~~~~~~~~~~~~~SQL Server, MySQL, SQLite}
-	\resumeSubItem{Reporting Tools}{~~~~~~~~~~~~~~Tableau, SQL Server Reporting Service}
-	\resumeSubItem{Toolkits}{~~~~~~~~~~~~~~LaTex}
-	\resumeSubItem{Libraries}{~~~~~~~~~~~~~~Pandas, NumPy, OpenCV, TensorFlow}
-	\resumeSubItem{Version Control}{~~~~~~~~~~~~~~Git, GitHub}
-	\resumeSubItem{Operating System}{~~~~~~~Windows(10,8.1,7), Ubuntu(16.04-20.04), Fedora, Red Hat, Kali, Linux Mint, Android}
-	\resumeSubItem{IDE Experience}{~~~~~~~Visual Studio Code, Pycharm, Android Studio, NetBeans, IntelliJ IDEA, Pycharm, CLion, Sublime \\ \hspace{35mm} Text, CodeBlocks, Nodepad++, XAMPP}
-	\resumeSubItem{Office Software}{~~~~~~~MS Word, Excel, Powerpoint}
-	\resumeSubItem{Soft Skills}{~~~~~~~Leadership, Event Management, Writing, Time Management}
+	\resumeSubItem{Programming Languages}C, C++, JAVA, Python, PHP, SQL}
+	\resumeSubItem{Frameworks}{Django, Flask, PyGame, Bootstrap, Tailwind CSS}
+	\resumeSubItem{Web Technologies}{PHP, HTML, CSS, XML, Markdown}
+	\resumeSubItem{Databases}{SQL Server, MySQL, SQLite}
+	\resumeSubItem{Reporting Tools}{Tableau, SQL Server Reporting Service}
+	\resumeSubItem{Toolkits}{LaTex}
+	\resumeSubItem{Libraries}{Pandas, NumPy, OpenCV, TensorFlow}
+	\resumeSubItem{Version Control}{Git, GitHub}
+	\resumeSubItem{Operating System}{Windows(10,8.1,7), Ubuntu(16.04-20.04), Fedora, Red Hat, Kali, Linux Mint, Android}
+	\resumeSubItem{IDE Experience}{Visual Studio Code, Pycharm, Android Studio, NetBeans, IntelliJ IDEA, Pycharm, CLion, Sublime \\ \hspace{35mm} Text, CodeBlocks, Nodepad++, XAMPP}
+	\resumeSubItem{Office Software}{MS Word, Excel, Powerpoint}
+	\resumeSubItem{Soft Skills}{Leadership, Event Management, Writing, Time Management}
 
 \resumeSubHeadingListEnd
 \vspace{5pt}
