Space bug fixed.

--- a/main.tex
+++ b/main.tex
@@ -90,8 +90,8 @@
 %-----------Career Objective-----------------
 \section{~~Career Objective}
   \resumeSubHeadingListStart
-      {Self-motivated and hardworking fresher seeking for an opportunity to work in a challenging environment to prove my skills and utilize my knowledge & intelligence in the growth of the organization.}
-    \resumeSubHeadingListEnd
+    {Self-motivated and hardworking fresher seeking for an opportunity to work in a challenging environment to prove my skills and utilize my knowledge and intelligence in the growth of the organization.}
+  \resumeSubHeadingListEnd
     
 \vspace{5pt}
 
@@ -102,35 +102,33 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Bangladesh Army University of Science and Technology (BAUST)}{Saidpur, Bangladesh}
-      {Bachelor of Science - Computer Science and Engineering;  Currently Studying}{November 2016 - Current}
-      {\scriptsize \textit{ \footnotesize{\newline{}\textbf}}
+      {Bachelor of Science - Computer Science and Engineering,  Currently Studying}{November 2016 - Current}
     \resumeSubHeadingListEnd
     
     %-----------HSC EDUCATION-----------------
     \resumeSubHeadingListStart
     \resumeSubheading
       {Carmichael College Rangpur}{Rangpur, Bangladesh}
-      {Higher Secondary Certificate - Science Group;  GPA: 4.58 on a scale of 5.00}{January 2014 - April 2016}
-      {\scriptsize \textit{ \footnotesize}{\newline{}\textbf}
+      {Higher Secondary Certificate - Science Group,  GPA: 4.58 on a scale of 5.00}{January 2014 - April 2016}
     \resumeSubHeadingListEnd
     
     %-----------SSC EDUCATION-----------------
     \resumeSubHeadingListStart
     \resumeSubheading
       {Rangpur Zilla School}{Rangpur, Bangladesh}
-      {Secondary School Certificate - Science Group;  GPA: 5.00 on a scale of 5.00}{January 2006 - April 2014}
-      {\scriptsize \textit{ \footnotesize}}
+      {Secondary School Certificate - Science Group,  GPA: 5.00 on a scale of 5.00}{January 2006 - April 2014}
     \resumeSubHeadingListEnd
-	    
+    
 \vspace{5pt}
 
 %-----------Thesis-----------------
 \section{~~Thesis}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Undergraduate Thesis}{BAUST Journal}
-      {}{}
-      {\scriptsize \textit{ \footnotesize{\newline{}\textbf{Hand Pose Estimation for Human Computer Interaction using effective feature extraction and machine learning algorithm}}}
+      {Undergraduate Thesis}{} 
+      {Ongoing}{} 
+      \hfill \break
+      { Hand Pose Estimation for Human Computer Interaction using effective feature extraction and machine learning algorithm.}
     \resumeSubHeadingListEnd
     
 \vspace{5pt}
@@ -152,20 +150,14 @@
 %-----------Experience-----------------
 \section{Experience}
   \resumeSubHeadingListStart
-    \resumeSubheading{Programming Contest}{}
-    {BAUST programming contest}{2019}
-    \resumeItemListStart
-          \resumeItem{I participated in an onsite programming contest. That was an amazing experience though I did not make a great score}
-      \resumeItemListEnd
+    \resumeSubheading{Programming Contest}{BAUST programming contest}
+    {participated in an onsite programming contest.}{2019}
       
 \vspace{5pt}
 
     \resumeSubheading
-		{Problem Solver}{}
-		{HackerRank}{2016 -  Present}
-		\resumeItemListStart
-            \resumeItem{Solution driven programmer}
-		\resumeItemListEnd
+		{Problem Solver}{hackerrank.com/montasim}
+		{Solution driven programmer}{2016 -  Present}
 
 \resumeSubHeadingListEnd
 
@@ -209,7 +201,7 @@ Tech: Java, Android}
 %-----------Skills Summary-----------------
 \section{Skills Summary}
 	\resumeSubHeadingListStart
-	\resumeSubItem{Programming Languages}C, C++, JAVA, Python, PHP, SQL}
+	\resumeSubItem{Programming Languages}{C, C++, JAVA, Python, PHP, SQL}
 	\resumeSubItem{Frameworks}{Django, Flask, PyGame, Bootstrap, Tailwind CSS}
 	\resumeSubItem{Web Technologies}{PHP, HTML, CSS, XML, Markdown}
 	\resumeSubItem{Databases}{SQL Server, MySQL, SQLite}
@@ -218,7 +210,7 @@ Tech: Java, Android}
 	\resumeSubItem{Libraries}{Pandas, NumPy, OpenCV, TensorFlow}
 	\resumeSubItem{Version Control}{Git, GitHub}
 	\resumeSubItem{Operating System}{Windows(10,8.1,7), Ubuntu(16.04-20.04), Fedora, Red Hat, Kali, Linux Mint, Android}
-	\resumeSubItem{IDE Experience}{Visual Studio Code, Pycharm, Android Studio, NetBeans, IntelliJ IDEA, Pycharm, CLion, Sublime \\ \hspace{35mm} Text, CodeBlocks, Nodepad++, XAMPP}
+	\resumeSubItem{IDE Experience}{Visual Studio Code, Pycharm, Android Studio, NetBeans, IntelliJ IDEA, Pycharm, CLion, Sublime \\ \hspace{28mm} Text, CodeBlocks, Nodepad++, XAMPP}
 	\resumeSubItem{Office Software}{MS Word, Excel, Powerpoint}
 	\resumeSubItem{Soft Skills}{Leadership, Event Management, Writing, Time Management}
 
@@ -281,37 +273,32 @@ Tech: Java, Android}
     % \vspace{10pt}\textbf{\large{Community Experience}}
     \resumeSubheading
     {Event Organizer at Rangpur Zilla School}{Rangpur, Bangladesh}
-    {Organized events, conducted workshops and delivered workshops}{2017 - 2014}
+    {Organized events, conducted workshops and delivered workshops}{2012 - 2014}
 
 \resumeSubHeadingListEnd
 
 \vspace{5pt}
 
 %-----------References-----------------
-\section{References}
+\section{~~References}
   \resumeSubHeadingListStart
-	\resumeSubheading
-    {Professor Dr. Md. Mamunur Rashid}{\newline}
-    
-
-    {Dean, Faculty of Electrical and Computer Engineering (ECE)}
-    \newline
-    {Bangladesh Army University of Science and Technology (BAUST)}
-    \newline
-    {Mobile: +8801769675558}{,}
-    {Email: hdcse@baust.edu.bd}
-\vspace{1pt}
     \resumeSubheading
-    {Abu Saleh Musa Miah}{\newline}
-    
-    
-    {Lecturer, Computer Science and Engineering (CSE)}
-    \newline
-    {Bangladesh Army University of Science and Technology (BAUST)}
-    \newline
-    {Mobile: +8801734264899}{,}
-    {Email: abusalehcse.ru@gmail.com}
-
-\resumeSubHeadingListEnd
+      {Professor Dr. Md. Mamunur Rashid}{} 
+      {Dean, Faculty of Electrical and Computer Engineering (ECE)}{} 
+      \hfill \break
+      {Bangladesh Army University of Science and Technology (BAUST)
+      \newline
+      Mobile: +8801769675558, Email: hdcse@baust.edu.bd \DontPrintColon}
+  \resumeSubHeadingListEnd
+  
+  \resumeSubHeadingListStart
+    \resumeSubheading
+      {Abu Saleh Musa Miah}{} 
+      {Lecturer, Computer Science and Engineering (CSE)}{} 
+      \hfill \break
+      {Bangladesh Army University of Science and Technology (BAUST)
+      \newline
+      Mobile: +8801734264899, Email: abusalehcse.ru@gmail.com \DontPrintColon}
+  \resumeSubHeadingListEnd
 
 \end{document}
