--- a/main.tex
+++ b/main.tex
@@ -80,9 +80,11 @@
 
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{{\LARGE Mohammad Montasim -Al- Mamun Shuvo}} &  \href{mailto:montasimmamun@gmail.com}{montasimmamun@gmail.com}\\
-  \href{https://xprilion.com}{Portfolio: montasim.github.io} & Mobile:~~~+8801722815469 \\
-  \href{https://github.com/montasim}{Github: ~~github.com/montasim} \\
+  \textbf{{\LARGE Mohammad Montasim -Al- Mamun Shuvo}} \\ \\
+  \href{mailto:montasimmamun@gmail.com}{Email ~~~~~:~~montasimmamun@gmail.com} \\
+  \href{https://montasim.github.io}{Portfolio \hspace{1.6mm}:~~montasim.github.io} \\ 
+  Mobile \hspace{4.5mm}:~~+8801722815469 \\
+  \href{https://github.com/montasim}{Github \hspace{4.1mm}:~~github.com/montasim} \\
 \end{tabular*}
 
 \vspace{15pt}
@@ -90,33 +92,39 @@
 %-----------Career Objective-----------------
 \section{~~Career Objective}
   \resumeSubHeadingListStart
-    {Self-motivated and hardworking fresher seeking for an opportunity to work in a challenging environment to prove my skills and utilize my knowledge and intelligence in the growth of the organization.}
+    {I want to make difference and willing to work hard for skillful career rather than regular career that I can be satisfied for. I want to work hard, be responsible and improve my profession and skills with a reputed organization in an ethical way in order to accept challenges.}
   \resumeSubHeadingListEnd
     
 \vspace{5pt}
 
-%-----------Education-----------------
-\section{~~Education}
+%-----------Academic Qualification-----------------
+\section{~~Academic Qualification}
 
   %-----------B.Sc.Engg. EDUCATION-----------------
   \resumeSubHeadingListStart
     \resumeSubheading
+      {Bachelor of Science in Computer Science and Engineering}{2016 - Current}
       {Bangladesh Army University of Science and Technology (BAUST)}{Saidpur, Bangladesh}
-      {Bachelor of Science - Computer Science and Engineering,  Currently Studying}{November 2016 - Current}
     \resumeSubHeadingListEnd
+    \vspace{-5pt}
     
     %-----------HSC EDUCATION-----------------
     \resumeSubHeadingListStart
     \resumeSubheading
-      {Carmichael College Rangpur}{Rangpur, Bangladesh}
-      {Higher Secondary Certificate - Science Group,  GPA: 4.58 on a scale of 5.00}{January 2014 - April 2016}
+      {Higher Secondary Certificate (HSC)}{2014 - 2016}
+      {Carmichael College Rangpur}{4.58 on a scale of 5.00}
+      
+      {Science Group}
     \resumeSubHeadingListEnd
+    \vspace{-5pt}
     
     %-----------SSC EDUCATION-----------------
     \resumeSubHeadingListStart
     \resumeSubheading
-      {Rangpur Zilla School}{Rangpur, Bangladesh}
-      {Secondary School Certificate - Science Group,  GPA: 5.00 on a scale of 5.00}{January 2006 - April 2014}
+      {Secondary School Certificate (SSC)}{2006 - 2014}
+      {Rangpur Zilla School}{5.00 on a scale of 5.00}
+      
+      {Science Group}
     \resumeSubHeadingListEnd
     
 \vspace{5pt}
@@ -174,13 +182,13 @@ Tech: PHP, Bootstrap, MySQL}
 
 \resumeSubItem{Get Your Car}{a simple car rental website. It helps you to showcase cars, rental price, speciality and so many things that are most important. This template can be used as a car rental website. 
 \newline
-Tech: Tailwind CSS, Bootstrap}
+Tech: HTML. CSS, Tailwind CSS, Bootstrap}
 
 \vspace{2pt}
 
 \resumeSubItem{myCodeOnlineBootstrap}{A simple Bootstrap website template. This template can be used as a blogging website. It has Home, About, Topics and Contact Me section.
 \newline
-Tech: Bootstrap}
+Tech: HTML. CSS, Bootstrap}
 
 \vspace{2pt}
 
@@ -196,7 +204,9 @@ Tech: Java, Android}
 
 \resumeSubHeadingListEnd
 
+
 \vspace{5pt}
+
 
 %-----------Skills Summary-----------------
 \section{Skills Summary}
@@ -213,6 +223,15 @@ Tech: Java, Android}
 	\resumeSubItem{IDE Experience}{Visual Studio Code, Pycharm, Android Studio, NetBeans, IntelliJ IDEA, Pycharm, CLion, Sublime \\ \hspace{28mm} Text, CodeBlocks, Nodepad++, XAMPP}
 	\resumeSubItem{Office Software}{MS Word, Excel, Powerpoint}
 	\resumeSubItem{Soft Skills}{Leadership, Event Management, Writing, Time Management}
+
+\resumeSubHeadingListEnd
+\vspace{5pt}
+
+%-----------Language proficiency-----------------
+\section{Language proficiency}
+	\resumeSubHeadingListStart
+	\resumeSubItem{English\hspace{2mm}}{Well versed in both written and spoken English}
+	\resumeSubItem{Bengli\hspace{3.6mm}}{Mother tongue}
 
 \resumeSubHeadingListEnd
 \vspace{5pt}
@@ -237,12 +256,6 @@ Tech: Java, Android}
 \item {Git + GitHub for Open Source Collaboration - at Coursera online course}
 \vspace{-5pt}
 \item {Use Commands and Create a Remote Git Repository - at Coursera online course}
-\vspace{-5pt}
-\item {Google Advanced Search: Find Stuff Like a Boss - at Udemy online course}
-\vspace{-5pt}
-\item {Command Line in Linux - at Coursera online course }
-\vspace{-5pt}
-\item {Learn Windows Command Line - at Coursera online course}
 
 \end{description}
 
@@ -263,8 +276,8 @@ Tech: Java, Android}
 \vspace{5pt}
 \end{comment}
 
-%-----------Volunteer Experience-----------------
-\section{Volunteer Experience}
+%-----------Extra Curriculum Activities-----------------
+\section{Extra Curriculum Activities}
   \resumeSubHeadingListStart
 	\resumeSubheading
     {Bangladesh National Cadet Corps(BNCC)}{Rangpur, Bangladesh}
@@ -275,6 +288,24 @@ Tech: Java, Android}
     {Event Organizer at Rangpur Zilla School}{Rangpur, Bangladesh}
     {Organized events, conducted workshops and delivered workshops}{2012 - 2014}
 
+\resumeSubHeadingListEnd
+
+\vspace{5pt}
+
+%-----------Personal Information-----------------
+\section{Personal Information}
+\resumeSubHeadingListStart
+\begin{tabular}{l l}
+Father's Name \hspace{10.5mm} : \hspace{2mm} MD. Hafizar Rahman \\
+Mother's Name \hspace{9.4mm} : \hspace{2mm} MST. Mozida Begum \\
+Parmanent Address \hspace{2.8mm} : \hspace{2mm} Balapara 20 Mega Watt, Rangpur Sadar, Rangpur \\
+Date of Birth \hspace{12.5mm} : \hspace{2mm} 16 December 1998 \\
+Nationality \hspace{16mm} : \hspace{2mm} Bangladeshi \\
+Gender \hspace{22.2mm} : \hspace{2mm} Male \\
+Marital Status \hspace{11mm} : \hspace{2mm} Unmarried \\
+Religion \hspace{20.7mm} : \hspace{2mm} Islam \\
+Blood Group \hspace{13.3mm} : \hspace{2mm} B+ \\
+\end{tabular}
 \resumeSubHeadingListEnd
 
 \vspace{5pt}
