Experience & Education updated.

--- a/main.tex
+++ b/main.tex
@@ -103,28 +103,22 @@
   %-----------B.Sc.Engg. EDUCATION-----------------
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Bachelor of Science in Computer Science and Engineering}{2016 - Current}
+      {Bachelor of Science in Computer Science and Engineering (CSE) }{2016 - Current}
       {Bangladesh Army University of Science and Technology (BAUST)}{Saidpur, Bangladesh}
-    \resumeSubHeadingListEnd
-    \vspace{-5pt}
+      
+      \vspace{5pt}
     
     %-----------HSC EDUCATION-----------------
-    \resumeSubHeadingListStart
     \resumeSubheading
       {Higher Secondary Certificate (HSC)}{2014 - 2016}
       {Carmichael College Rangpur}{4.58 on a scale of 5.00}
       
-      {Science Group}
-    \resumeSubHeadingListEnd
-    \vspace{-5pt}
-    
+      \vspace{5pt}
+
     %-----------SSC EDUCATION-----------------
-    \resumeSubHeadingListStart
     \resumeSubheading
       {Secondary School Certificate (SSC)}{2006 - 2014}
       {Rangpur Zilla School}{5.00 on a scale of 5.00}
-      
-      {Science Group}
     \resumeSubHeadingListEnd
     
 \vspace{5pt}
@@ -159,15 +153,21 @@
 \section{Experience}
   \resumeSubHeadingListStart
     \resumeSubheading{Programming Contest}{BAUST programming contest}
-    {participated in an onsite programming contest.}{2019}
+    {Participated in BAUST onsite programming contest.}{2019}
       
 \vspace{5pt}
 
     \resumeSubheading
-		{Problem Solver}{hackerrank.com/montasim}
-		{Solution driven programmer}{2016 -  Present}
+        {Content Writer}{Crystal It and Soft, Rangpur}
+		{Wrote over 150 articles/blogs for the company's various clients.}{2019 -  2020}
+		
+\vspace{5pt}
 
-\resumeSubHeadingListEnd
+    \resumeSubheading
+		{Problem Solver}{\href{https://www.hackerrank.com/montasim}{hackerrank.com/montasim}}
+		{Solution driven programmer.}{2018 -  Present}
+
+    \resumeSubHeadingListEnd
 
 \vspace{5pt}
 
@@ -176,31 +176,31 @@
 \resumeSubHeadingListStart
 \resumeSubItem{Employee Management System}{A simple Employee Management System website. With this website a company can maintain their employees. Employee can request leave from this website. Admin can manage all employees from here. 
 \newline
-Tech: PHP, Bootstrap, MySQL}
+\textbf{Tech:} PHP, Bootstrap, MySQL}
 
 \vspace{2pt}
 
 \resumeSubItem{Get Your Car}{a simple car rental website. It helps you to showcase cars, rental price, speciality and so many things that are most important. This template can be used as a car rental website. 
 \newline
-Tech: HTML. CSS, Tailwind CSS, Bootstrap}
+\textbf{Tech:} HTML. CSS, Tailwind CSS, Bootstrap}
 
 \vspace{2pt}
 
 \resumeSubItem{myCodeOnlineBootstrap}{A simple Bootstrap website template. This template can be used as a blogging website. It has Home, About, Topics and Contact Me section.
 \newline
-Tech: HTML. CSS, Bootstrap}
+\textbf{Tech:} HTML. CSS, Bootstrap}
 
 \vspace{2pt}
 
 \resumeSubItem{Car Game}{A simple car game. User can move car by pressing up, down, left, right arrow key. After every successful car passing points is added. Shows high score. 
 \newline
-Tech: Python, PyGame}
+\textbf{Tech:} Python, PyGame}
 
 \vspace{2pt}
 
 \resumeSubItem{E-HealthCare}{Simple Android application which can be used as a health care app. This app can help taking primary treatment in any danger situation. Dr and ambulance can be called by this application. 
 \newline
-Tech: Java, Android}
+\textbf{Tech:} Java, Android}
 
 \resumeSubHeadingListEnd
 
@@ -215,8 +215,7 @@ Tech: Java, Android}
 	\resumeSubItem{Frameworks}{Django, Flask, PyGame, Bootstrap, Tailwind CSS}
 	\resumeSubItem{Web Technologies}{PHP, HTML, CSS, XML, Markdown}
 	\resumeSubItem{Databases}{SQL Server, MySQL, SQLite}
-	\resumeSubItem{Reporting Tools}{Tableau, SQL Server Reporting Service}
-	\resumeSubItem{Toolkits}{LaTex}
+	\resumeSubItem{Toolkits}{LaTex, Matlab}
 	\resumeSubItem{Libraries}{Pandas, NumPy, OpenCV, TensorFlow}
 	\resumeSubItem{Version Control}{Git, GitHub}
 	\resumeSubItem{Operating System}{Windows(10,8.1,7), Ubuntu(16.04-20.04), Fedora, Red Hat, Kali, Linux Mint, Android}
@@ -294,19 +293,19 @@ Tech: Java, Android}
 
 %-----------Personal Information-----------------
 \section{Personal Information}
-\resumeSubHeadingListStart
-\begin{tabular}{l l}
-Father's Name \hspace{10.5mm} : \hspace{2mm} MD. Hafizar Rahman \\
-Mother's Name \hspace{9.4mm} : \hspace{2mm} MST. Mozida Begum \\
-Parmanent Address \hspace{2.8mm} : \hspace{2mm} Balapara 20 Mega Watt, Rangpur Sadar, Rangpur \\
-Date of Birth \hspace{12.5mm} : \hspace{2mm} 16 December 1998 \\
-Nationality \hspace{16mm} : \hspace{2mm} Bangladeshi \\
-Gender \hspace{22.2mm} : \hspace{2mm} Male \\
-Marital Status \hspace{11mm} : \hspace{2mm} Unmarried \\
-Religion \hspace{20.7mm} : \hspace{2mm} Islam \\
-Blood Group \hspace{13.3mm} : \hspace{2mm} B+ \\
-\end{tabular}
-\resumeSubHeadingListEnd
+    \resumeSubHeadingListStart
+        \begin{tabular}{l l}
+            \textbf{Father's Name} \hspace{10.5mm} : \hspace{2mm} MD. Hafizar Rahman \\
+            \textbf{Mother's Name} \hspace{8.9mm} : \hspace{2mm} MST. Mozida Begum \\
+            \textbf{Parmanent Address} \hspace{1.5mm} : \hspace{2mm} Balapara 20 Mega Watt, Rangpur Sadar, Rangpur \\
+            \textbf{Date of Birth} \hspace{12.6mm} : \hspace{2mm} 16 December 1998 \\
+            \textbf{Nationality} \hspace{16.6mm} : \hspace{2mm} Bangladeshi \\
+            \textbf{Gender} \hspace{23.4mm} : \hspace{2mm} Male \\
+            \textbf{Marital Status} \hspace{10.6mm} : \hspace{2mm} Unmarried \\
+            \textbf{Religion} \hspace{21.7mm} : \hspace{2mm} Islam \\
+            \textbf{Blood Group} \hspace{13.3mm} : \hspace{2mm} B+ 
+        \end{tabular}
+    \resumeSubHeadingListEnd
 
 \vspace{5pt}
 
@@ -320,9 +319,7 @@ Blood Group \hspace{13.3mm} : \hspace{2mm} B+ \\
       {Bangladesh Army University of Science and Technology (BAUST)
       \newline
       Mobile: +8801769675558, Email: hdcse@baust.edu.bd \DontPrintColon}
-  \resumeSubHeadingListEnd
-  
-  \resumeSubHeadingListStart
+      
     \resumeSubheading
       {Abu Saleh Musa Miah}{} 
       {Lecturer, Computer Science and Engineering (CSE)}{} 
