--- a/main.tex
+++ b/main.tex
@@ -103,22 +103,22 @@
   %-----------B.Sc.Engg. EDUCATION-----------------
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Bachelor of Science in Computer Science and Engineering (CSE) }{2016 - Current}
-      {Bangladesh Army University of Science and Technology (BAUST)}{Saidpur, Bangladesh}
+      {Bachelor of Science in Computer Science and Engineering (CSE) }{2016 - 2021}
+      {Bangladesh Army University of Science and Technology (BAUST)}{}
       
       \vspace{5pt}
     
     %-----------HSC EDUCATION-----------------
     \resumeSubheading
       {Higher Secondary Certificate (HSC)}{2014 - 2016}
-      {Carmichael College Rangpur}{4.58 on a scale of 5.00}
+      {Carmichael College Rangpur}{}
       
       \vspace{5pt}
 
     %-----------SSC EDUCATION-----------------
     \resumeSubheading
       {Secondary School Certificate (SSC)}{2006 - 2014}
-      {Rangpur Zilla School}{5.00 on a scale of 5.00}
+      {Rangpur Zilla School}{}
     \resumeSubHeadingListEnd
     
 \vspace{5pt}
@@ -127,10 +127,9 @@
 \section{~~Thesis}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Undergraduate Thesis}{} 
-      {Ongoing}{} 
+      {Undergraduate Project}{} 
       \hfill \break
-      { Hand Pose Estimation for Human Computer Interaction using effective feature extraction and machine learning algorithm.}
+      { Hand Keypoint Detection in Single Images using Multiview Bootstrapping.}
     \resumeSubHeadingListEnd
     
 \vspace{5pt}
