--- a/main.tex
+++ b/main.tex
@@ -120,9 +120,11 @@
       {Secondary School Certificate (SSC)}{2006 - 2014}
       {Rangpur Zilla School}{}
     \resumeSubHeadingListEnd
+
     
 \vspace{5pt}
 
+\begin{comment}
 %-----------Thesis-----------------
 \section{~~Thesis}
   \resumeSubHeadingListStart
@@ -134,7 +136,6 @@
     
 \vspace{5pt}
 
-\begin{comment}
 %-----------Publications
 \section{Publications}
 \resumeSubHeadingListStart
@@ -151,9 +152,10 @@
 %-----------Experience-----------------
 \section{Experience}
   \resumeSubHeadingListStart
-    \resumeSubheading{Programming Contest}{BAUST programming contest}
-    {Participated in BAUST onsite programming contest.}{2019}
-      
+    \resumeSubheading
+        {Web Developer}{Crystal It and Soft, Rangpur}
+		{Developed and maintained affiliate marketing website.}{2019 -  2020}
+    
 \vspace{5pt}
 
     \resumeSubheading
@@ -173,6 +175,11 @@
 %-----------Projects-----------------
 \section{Projects}
 \resumeSubHeadingListStart
+\resumeSubItem{Undergraduate Project}{Hand Keypoint Detection in Single Images using Multiview Bootstrapping.
+\newline
+\textbf{Tech:} Python}
+
+\vspace{2pt}
 \resumeSubItem{Employee Management System}{A simple Employee Management System website. With this website a company can maintain their employees. Employee can request leave from this website. Admin can manage all employees from here. 
 \newline
 \textbf{Tech:} PHP, Bootstrap, MySQL}
