--- a/main.tex
+++ b/main.tex
@@ -102,7 +102,7 @@
 \section{~~Career Objective}
   \resumeSubHeadingListStart
   \item[]
-    {I want to make difference and willing to work hard for a skillful career rather than a regular career that I can be satisfied with. I want to work hard, be responsible and improve my profession and skills with a reputed organization in an ethical way to accept challenges.}
+    {Practical and versatile Software Engineer with significant experience in developing software and websites. I can handle multiple tasks daily. I use a creative approach to solve problems. I am a dependable person who is great at time management. I am always energetic and eager to learn new skills.}
     
   \resumeSubHeadingListEnd
     
@@ -114,22 +114,22 @@
   %-----------B.Sc.Engg. EDUCATION-----------------
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Bachelor of Science in Computer Science and Engineering (CSE) }{2016 - 2021}
-      {Bangladesh Army University of Science and Technology (BAUST)}{2.96 out of 4.00 (CGPA)}
+      {Bachelor of Science in Computer Science and Engineering ((B.Sc. in CSE) }{2016 - 2021}
+      {Bangladesh Army University of Science and Technology (BAUST)}{}
       
       \vspace{5pt}
     
     %-----------HSC EDUCATION-----------------
     \resumeSubheading
       {Higher Secondary Certificate (HSC)}{2014 - 2016}
-      {Carmichael College Rangpur}{4.58 out of 5.00 (GPA)}
+      {Carmichael College Rangpur}{}
       
       \vspace{5pt}
 
     %-----------SSC EDUCATION-----------------
     \resumeSubheading
       {Secondary School Certificate (SSC)}{2006 - 2014}
-      {Rangpur Zilla School}{5.00 out of 5.00 (GPA)}
+      {Rangpur Zilla School}{}
     \resumeSubHeadingListEnd
 
 
@@ -142,7 +142,7 @@
     \resumeSubheading
       {Undergraduate Thesis and Project:}{Hand pose estimation in single RGB image with Multiview Bootstrapping.}
       \break{} 
-      \textbf{Tech:}{ Deep Learning, OpenCV, Convolutional Neural Network (CNN), Python}
+      {- \quad Deep Learning, OpenCV, Convolutional Neural Network (CNN), Python}
     \resumeSubHeadingListEnd
     
 \vspace{5pt}
@@ -187,38 +187,34 @@
 %-----------Projects-----------------
 \section{Projects}
 \resumeSubHeadingListStart
-\resumeSubItem{Undergraduate Project}{Hand Keypoint Detection in Single Images using Multiview Bootstrapping.
-\newline
-\textbf{Tech:} Deep Learning, OpenCV, Convolutional Neural Network (CNN), Python}
-
-\vspace{2pt}
 \resumeSubItem{Employee Management System}{A simple Employee Management System website. With this website a company can maintain their employees. Employee can request leave from this website. Admin can manage all employees from here. 
 \newline
-\textbf{Tech:} PHP, Bootstrap, MySQL}
+\hspace{10mm}
+- \quad PHP, Bootstrap, MySQL}
 
 \vspace{2pt}
 
 \resumeSubItem{Get Your Car}{a simple car rental website. It helps you to showcase cars, rental price, speciality and so many things that are most important. This template can be used as a car rental website. 
 \newline
-\textbf{Tech:} HTML. CSS, Tailwind CSS, Bootstrap}
+- \quad HTML. CSS, Tailwind CSS, Bootstrap}
 
 \vspace{2pt}
 
 \resumeSubItem{myCodeOnlineBootstrap}{A simple Bootstrap website template. This template can be used as a blogging website. It has Home, About, Topics and Contact Me section.
 \newline
-\textbf{Tech:} HTML. CSS, Bootstrap}
+- \quad HTML. CSS, Bootstrap}
 
 \vspace{2pt}
 
 \resumeSubItem{Car Game}{A simple car game. User can move car by pressing up, down, left, right arrow key. After every successful car passing points is added. Shows high score. 
 \newline
-\textbf{Tech:} Python, PyGame}
+- \quad Python, PyGame}
 
 \vspace{2pt}
 
-\resumeSubItem{E-HealthCare}{Simple Android application which can be used as a health care app. This app can help taking primary treatment in any danger situation. Dr and ambulance can be called by this application. 
+\resumeSubItem{E-HealthCare}{Simple Android application which can be used as a health care app. This is an android application. It helps you find nearby hospitals, pharmacies, and Ambulance. You also can book an ambulance.
 \newline
-\textbf{Tech:} Java, Android}
+- \quad Java, Android}
 
 \resumeSubHeadingListEnd
 
@@ -230,11 +226,12 @@
 \section{Skills Summary}
 	\resumeSubHeadingListStart
 	\resumeSubItem{Programming Languages}{C, C++, JAVA, Python, PHP, SQL}
-	\resumeSubItem{Frameworks}{Django, Flask, PyGame, Bootstrap, Tailwind CSS}
+	\resumeSubItem{Web Frameworks}{Django, Flask, PyGame, Bootstrap, Tailwind CSS}
 	\resumeSubItem{Web Technologies}{PHP, HTML, CSS, XML, Markdown}
+	\resumeSubItem{Content Management System (CMS)}{WordPress, Blogger}
 	\resumeSubItem{Databases}{SQL Server, MySQL, SQLite}
-	\resumeSubItem{Toolkits}{LaTex, Matlab}
-	\resumeSubItem{Libraries}{Pandas, NumPy, OpenCV, TensorFlow}
+	\resumeSubItem{Toolkits}{LaTex}
+	\resumeSubItem{Libraries}{Pandas, NumPy, OpenCV}
 	\resumeSubItem{Version Control}{Git, GitHub}
 	\resumeSubItem{Operating System}{Windows(10,8.1,7), Ubuntu(16.04-20.04), Fedora, Red Hat, Kali, Linux Mint, Android}
 	\resumeSubItem{IDE Experience}{Visual Studio Code, Pycharm, Android Studio, NetBeans, IntelliJ IDEA, Pycharm, CLion, Sublime \\ \hspace{28mm} Text, CodeBlocks, Nodepad++, XAMPP}
@@ -254,7 +251,7 @@
 \vspace{5pt}
 
 %-----------Training and Participation-----------------
-\section{Training and Participation}
+\section{Training, Participation and Certification}
 \begin{description}[font=$\bullet$]
 \item {Mobile Game And Application Development For Android - at ICT Division of Bangladesh}
 \vspace{-5pt}
